--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemon": "^3.1.10",
     "pdfkit": "^0.13.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
