--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "cd back && node app.js",
     "dev": "nodemon app.js"
   },
   "dependencies": {
